--- a/layouts/shortcodes/activity/memorial.html
+++ b/layouts/shortcodes/activity/memorial.html
@@ -9,75 +9,70 @@
             }" 
             class="p-2 xl:p-8"
         >
-            <ul class="flex items-start justify-start text-3xl">
-            <li @click="openTab = 1" :class="{ '-mb-px': openTab === 1 }" class="-mb-px mx-4 xl:mx-16">
-                <a :class="openTab === 1 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 px-4 font-semibold" href="#{{ .기림일.slug }}">{{ .기림일.title }}</a>
-            </li>
-            <li @click="openTab = 2" :class="{ '-mb-px': openTab === 2 }" class="mx-4 xl:mx-16">
-                <a :class="openTab === 2 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 px-4 font-semibold" href="#{{ .국내평화비.slug }}">{{ .국내평화비.title }}</a>
-            </li>
-            <li @click="openTab = 3" :class="{ '-mb-px': openTab === 3 }" class="mx-4 xl:mx-16">
-                <a :class="openTab === 3 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 px-4 font-semibold" href="#{{ .해외평화비.slug }}">{{ .해외평화비.title }}</a>
-            </li>    
-            </ul>
+            <ul class="flex items-start justify-start text-lg md:text-3xl">
+                <li @click="openTab = 1" :class="{ '-mb-px': openTab === 1 }" class="-mb-px mx-4 xl:mx-16">
+                    <a :class="openTab === 1 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 xl:px-4 font-semibold" href="#{{ .기림일.slug }}">{{ .기림일.title }}</a>
+                </li>
+                <li @click="openTab = 2" :class="{ '-mb-px': openTab === 2 }" class="mx-4 xl:mx-16">
+                    <a :class="openTab === 2 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 xl:px-4 font-semibold" href="#{{ .국내평화비.url }}">{{ .국내평화비.title }}</a>
+                </li>
+                <li @click="openTab = 3" :class="{ '-mb-px': openTab === 3 }" class="mx-4 xl:mx-16">
+                    <a :class="openTab === 3 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 xl:px-4 font-semibold" href="#{{ .해외평화비.url }}">{{ .해외평화비.title }}</a>
+                </li>    
+            </ul>            
             <div class="w-full pt-4">
                 <div x-show="openTab === 1">
-                    <div class="lg:flex justify-center py-12">
-                        <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4">{{ .기림일.title }}<br/><span class="mr-4"></span></h2>
-                        <div class="text-lg">
-                            <p class="mb-7">정의기억연대는 일본군'위안부'피해생존자들이 겪었던 역사를 기억하고 교육하며,
-                                일본군 성노예제 문제 해결을 위해 활동하는 공간입니다. 지금도 일어나고 있는 전시성폭력 문제에 관심을 가지고 전쟁과 여성폭력 없는 세상을 위해 연대하고 행동하는 박물관입니다. </p>
-                    
-                            <p class="mb-7">안전하고 평화로운 세상에서 아이들이 자라길 바랐던 일본군'위안부' 피해생존자들의 오랜 염원은 국내외 시민들의 공감을 불러일으켜 모금 활동으로 이어졌습니다. 기나긴 여정을 지나
-                            마침내 2012년 5월 5일 어린이날, 정의기억연대는 미래세대와 시민들에게 특별한 선물이 되어 문을 열었습니다. </p>
-                    
-                            <p class="mb-7">정의기억연대는 다양한 전시와 교육 프로그램을 통해 과거의 역사와 기억을 알리고,
-                            ‘여성, 인권, 평화’를 향한 현재의 활동을 기록함으로써 미래세대에게 더 나은 세상을 전하고자 합니다.</p>
-                    
-                            <p class="mb-7">초국적 시민 연대의 통로, 미래세대 교육의 장, 기억과 기록의 국제 플랫폼이 되고자 하는 이곳 정의기억연대 홈페이지에 여러분들의 지속적인 관심과 참여 부탁드립니다. </p>
-                    
-                            <p>감사합니다.</p>
+                    {{ range .기림일.목록 }}
+                        <div class="lg:flex justify-start pt-6">
+                            <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4">{{ .title }}</h2>
+                            <div class="text-lg">
+                                <p class="mb-7">{{ .body }} </p>
+                            </div>
                         </div>
-                    </div>
-                </div>          
+                    {{ end }}
+                </div>
                 <div x-show="openTab === 2">
-                    <div class="lg:flex justify-center py-12">
-                        <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4">{{ .국내평화비.title }}<br/><span class="mr-4"></span></h2>
-                        <div class="text-lg">
-                            <p class="mb-7">정의기억연대는 일본군'위안부'피해생존자들이 겪었던 역사를 기억하고 교육하며,
-                                일본군 성노예제 문제 해결을 위해 활동하는 공간입니다. 지금도 일어나고 있는 전시성폭력 문제에 관심을 가지고 전쟁과 여성폭력 없는 세상을 위해 연대하고 행동하는 박물관입니다. </p>
-                    
-                            <p class="mb-7">안전하고 평화로운 세상에서 아이들이 자라길 바랐던 일본군'위안부' 피해생존자들의 오랜 염원은 국내외 시민들의 공감을 불러일으켜 모금 활동으로 이어졌습니다. 기나긴 여정을 지나
-                            마침내 2012년 5월 5일 어린이날, 정의기억연대는 미래세대와 시민들에게 특별한 선물이 되어 문을 열었습니다. </p>
-                    
-                            <p class="mb-7">정의기억연대는 다양한 전시와 교육 프로그램을 통해 과거의 역사와 기억을 알리고,
-                            ‘여성, 인권, 평화’를 향한 현재의 활동을 기록함으로써 미래세대에게 더 나은 세상을 전하고자 합니다.</p>
-                    
-                            <p class="mb-7">초국적 시민 연대의 통로, 미래세대 교육의 장, 기억과 기록의 국제 플랫폼이 되고자 하는 이곳 정의기억연대 홈페이지에 여러분들의 지속적인 관심과 참여 부탁드립니다. </p>
-                    
-                            <p>감사합니다.</p>
+                    <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4 pt-12">{{ .국내평화비.평화비의의미.title }}</h2>
+                    {{ range .국내평화비.평화비의의미.body }}
+                        <div class="lg:flex justify-start pt-6">
+                            <div class="text-lg">
+                                <p class="mb-7">{{ . }} </p>
+                            </div>
                         </div>
+                    {{ end }}
+                    <div class="mb-8"> 
+                        <ul class="flex flex-wrap pt-6">
+                            <li class="w-full">
+                                <span class="block overflow-hidden relative" style="padding-bottom:50%">
+                                    <img class="absolute w-full object-cover" src="{{ .국내평화비.평화비의의미.src }}" alt="{{ .국내평화비.평화비의의미.title }}">
+                                </span>
+                                <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4 pt-12">{{ .국내평화비.평화비의의미.평화비구매.title }}</h2>
+                                <p class="mb-7 mt-7 text-lg text-start">{{ .국내평화비.평화비의의미.평화비구매.body }}</p>
+                                <p class="mb-7 mt-7 text-lg text-start text-aa-purple-500 underline"><a href="{{ .국내평화비.평화비의의미.평화비구매.url }}">{{ .국내평화비.평화비의의미.평화비구매.url }}</a></p>
+                            </li>
+                        </ul>
                     </div>
+                    <div class="mb-8"> 
+                        <ul class="flex flex-wrap pt-6">
+                            <li class="w-full">
+                                <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4 pt-12">{{ .국내평화비.국내건립현황.title }}</h2>
+                                <p class="mb-7 mt-7 text-lg text-start">{{ .국내평화비.국내건립현황.body }}</p>
+                                <p class="mb-7 mt-7 text-lg text-start text-aa-purple-500 underline"><a href="{{ .국내평화비.국내건립현황.src }}">{{ .국내평화비.국내건립현황.title }}(엑셀다운로드)</a></p>
+                            </li>
+                        </ul>
+                    </div>                                    
                 </div>
                 <div x-show="openTab === 3">
-                    <div class="lg:flex justify-center py-12">
-                        <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4">{{ .해외평화비.title }}</h2>
-                        <div class="text-lg">
-                            <p class="mb-7">정의기억연대는 일본군'위안부'피해생존자들이 겪었던 역사를 기억하고 교육하며,
-                                일본군 성노예제 문제 해결을 위해 활동하는 공간입니다. 지금도 일어나고 있는 전시성폭력 문제에 관심을 가지고 전쟁과 여성폭력 없는 세상을 위해 연대하고 행동하는 박물관입니다. </p>
-                    
-                            <p class="mb-7">안전하고 평화로운 세상에서 아이들이 자라길 바랐던 일본군'위안부' 피해생존자들의 오랜 염원은 국내외 시민들의 공감을 불러일으켜 모금 활동으로 이어졌습니다. 기나긴 여정을 지나
-                            마침내 2012년 5월 5일 어린이날, 정의기억연대는 미래세대와 시민들에게 특별한 선물이 되어 문을 열었습니다. </p>
-                    
-                            <p class="mb-7">정의기억연대는 다양한 전시와 교육 프로그램을 통해 과거의 역사와 기억을 알리고,
-                            ‘여성, 인권, 평화’를 향한 현재의 활동을 기록함으로써 미래세대에게 더 나은 세상을 전하고자 합니다.</p>
-                    
-                            <p class="mb-7">초국적 시민 연대의 통로, 미래세대 교육의 장, 기억과 기록의 국제 플랫폼이 되고자 하는 이곳 정의기억연대 홈페이지에 여러분들의 지속적인 관심과 참여 부탁드립니다. </p>
-                    
-                            <p>감사합니다.</p>
-                        </div>
+                    <div class="mb-8"> 
+                        <ul class="flex flex-wrap pt-6">
+                            <li class="w-full">
+                                <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4 pt-12">{{ .해외평화비.해외건립현황.title }}</h2>
+                                <p class="mb-7 mt-7 text-lg text-start">{{ .해외평화비.해외건립현황.body }}</p>
+                                <p class="mb-7 mt-7 text-lg text-start text-aa-purple-500 underline"><a href="{{ .해외평화비.해외건립현황.src }}">{{ .해외평화비.해외건립현황.title }}(엑셀다운로드)</a></p>
+                            </li>
+                        </ul>
                     </div>
-                </div>
+                </div>                                
             </div>
         </div>
     </div>
