--- a/layouts/shortcodes/activity/victim_support.html
+++ b/layouts/shortcodes/activity/victim_support.html
@@ -14,7 +14,7 @@
                     <a :class="openTab === 1 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 xl:px-4 font-semibold" href="#{{ .활동소개.slug }}">{{ .활동소개.title }}</a>
                 </li>
                 <li @click="openTab = 2" :class="{ '-mb-px': openTab === 2 }" class="mx-4 xl:mx-16">
-                    <a :class="openTab === 2 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 xl:px-4 font-semibold" href="{{ .할머니소식.url }}" target="_blank">{{ .할머니소식.title }}</a>
+                    <a :class="openTab === 2 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 xl:px-4 font-semibold" href="{{ .할머니소식.url }}">{{ .할머니소식.title }}</a>
                 </li>
             </ul>
             <div class="w-full pt-4">
