소식 목록을 개선합니다.

--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,15 +1,21 @@
 {{ if eq .Parent.RelPermalink "/connect/notice/" }}
   <li class="flex py-6 border-b border-aa-gray-200 text-aa-gray-600">
     <a class="w-4/6 px-4 text-aa-gray-700 hover:text-aa-purple-500" href="{{ .Permalink }}">{{ .Title }}</a>
-    <span class="w-1/6 text-center"><time>{{ .Date.Format "2006년 1월 2일" }}</time></span>
-    <span class="w-1/6 text-center">{{ .Params.Author }}</span>
+    <span class="w-1/6 text-center"><time>{{ .Params.updated }}</time></span>
+    <span class="w-1/6 text-center">{{ .Params.Author_name }}</span>
   </li>
 {{ else if eq .Parent.RelPermalink "/connect/press-release/" }}
   <li class="flex py-6 border-b border-aa-gray-200 text-aa-gray-600">
     <a class="w-4/6 px-4 text-aa-gray-700 hover:text-aa-purple-500" href="{{ .Permalink }}">{{ .Title }}</a>
-    <span class="w-1/6 text-center"><time>{{ .Date.Format "2006년 1월 2일" }}</time></span>
-    <span class="w-1/6 text-center">{{ .Params.Author }}</span>
+    <span class="w-1/6 text-center"><time>{{ .Params.updated }}</time></span>
+    <span class="w-1/6 text-center">{{ .Params.Author_name }}</span>
   </li>
+{{ else if eq .Parent.RelPermalink "/connect/resource/" }}
+  <li class="flex py-6 border-b border-aa-gray-200 text-aa-gray-600">
+    <a class="w-4/6 px-4 text-aa-gray-700 hover:text-aa-purple-500" href="{{ .Permalink }}">{{ .Title }}</a>
+    <span class="w-1/6 text-center"><time>{{ .Params.updated }}</time></span>
+    <span class="w-1/6 text-center">{{ .Params.Author_name }}</span>
+  </li>  
 {{ else if eq .Parent.RelPermalink "/about/budget/" }}
   <li class="flex py-6 border-b border-aa-gray-200 text-aa-gray-600">
     <a class="w-4/6 px-4 text-aa-gray-700 hover:text-aa-purple-500" href="{{ .Permalink }}">{{ .Title }}</a>
