--- a/layouts/partials/base/header-ww.html
+++ b/layouts/partials/base/header-ww.html
@@ -10,7 +10,10 @@
         </li>
         <li class="rounded-full px-4 py-2 text-white bg-aa-purple-500 hover:bg-white hover:text-aa-gray-900 text-sm">
           <a href="/guide/jp-information">日語</a>
-        </li>        
+        </li>
+        <li class="rounded-full px-4 py-2 text-white bg-aa-purple-500 hover:bg-white hover:text-aa-gray-900 text-sm">
+          <a href="https://womenandwarmuseum.net/" target="_blank">전쟁과여성인권박물관</a>
+        </li>         
       </ul>
     </div>
     <div class="mx-auto lg:px-8 px-8 lg:flex justify-between items-center h-24 z-10 relative" x-data="{ 'showMobileMenu': false }">
@@ -89,14 +92,17 @@
         </ul>
         <ul class="flex justify-center text-aa-gray-600 py-6">
           <li>
-            <a href="">KO</a> <span class="mx-2">|</span>
+            <a href="/">KO</a> <span class="mx-2">|</span>
           </li>
           <li>
-            <a href="">ENG</a> <span class="mx-2">|</span>
+            <a href="/guide/en-information">ENG</a><span class="mx-2">|</span>
           </li>
           <li>
-            <a href="">日本語</a>
+            <a href="/guide/jp-information">日本語</a><span class="mx-2">|</span>
           </li>
+          <li>
+            <a href="https://womenandwarmuseum.net/" target="_blank">전쟁과여성인권박물관</a>
+          </li>          
         </ul>
       </div>
       <!-- //mobile menu -->
